# gtkpass

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  gtkpass.desktop
src/: gtkpass.c
